[project]
name = "boundedexp"
version = "0.1.0"
description = "Sample from an exponential distribution with a maximum value"
readme = "README.md"
requires-python = ">=3.8"
dependencies = []

[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[tool.maturin]
# "extension-module" tells pyo3 we want to build an extension module (skips linking against libpython.so)
features = ["pyo3/extension-module"]

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
    "marimo>=0.8.22",
    "maturin>=1.9.4",
    "mkdoc>=0.1",
    "pytest>=8.3.5",
]
